[package]
name = "bitcoin-analytics"
version = "0.1.0"
edition = "2021"

[dependencies]
bitcoin = "0.32.5"
bitcoin-rpc = "0.2.0"
bitcoincore-rpc = "0.19.0"
config = "0.15.8"
env_logger = "0.11.6"
log = "0.4.26"
rocket = { version = "0.5.1", features = ["json"] }
serde = "1.0.218"
sqlx = { version = "0.8.3", features = ["runtime-tokio-rustls", "sqlite"] }
tokio = "1.43.0"
